dark mode small fix for mermaid...

--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -4,4 +4,8 @@
   img[src$=".svg"]{
     filter: grayscale(1) invert(1);
   }
+  div.mermaid svg path.relation
+  {
+    stroke:ghostwhite !important;
+  }
 }
